# Pit-1

./: .gitignore  cli.py  pyproject.toml
Pit-1/: README.md
agents/: infra_agent.py
cmux/: pane.py
core/: context.py  router.py  strategist.py
llm/: client.py  parser.py
llm/prompts/: analyze.txt  architecture.txt  iac.txt
providers/aws/: __init__.py
providers/digitalocean/: __init__.py
providers/gcp/: __init__.py
providers/hetzner/: __init__.py
providers/oracle/: __init__.py
providers/vercel/: __init__.py
skills/analyze/: __init__.py  db.py  deps.py  runtime.py  traffic.py
skills/execute/: __init__.py  api.py  browser.py  cli.py  iac_runner.py
skills/generate/: __init__.py  dockerfile.py
skills/observe/: __init__.py
skills/recommend/: __init__.py
templates/docker/: node.Dockerfile.jinja2
templates/terraform/: aws_ec2.tf.jinja2
tests/: test_analyze.py
utils/: config.py  logger.py
